--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+u-boot (2019.04+dfsg-2ubuntu2) eoan; urgency=low
+
+  * Enable FIT signing support (LP: #1831942)
+    - Enable CONFIG_FIT_SIGNATURE so we can sign FIT images.
+    - Add libssl-dev to Build-Depends: to enable crypto functionality.
+    - Limit key names to keys within the keydir.
+
+ -- Andy Whitcroft <apw@ubuntu.com>  Mon, 10 Jun 2019 15:44:35 +0100
+
 u-boot (2019.04+dfsg-2ubuntu1) eoan; urgency=medium
 
   * Merge with 2019.04+dfsg-2 from Debian experimental. Remaining changes:
