--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+u-boot (2018.07~rc3+dfsg1-0ubuntu3~18.04.1) bionic; urgency=low
+
+  * Enable FIT signing support (LP: #1831942)
+    - Enable CONFIG_FIT_SIGNATURE so we can sign FIT images.
+    - Add libssl-dev to Build-Depends: to enable crypto functionality.
+    - Limit key names to keys within the keydir.
+
+ -- Andy Whitcroft <apw@ubuntu.com>  Mon, 10 Jun 2019 20:52:14 +0100
+
 u-boot (2018.07~rc3+dfsg1-0ubuntu2~18.04.1) bionic; urgency=medium
 
   * d/control: Add missing dependency on binutils (for strings) (LP: #1814930)
