--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ u-boot (2019.07+dfsg-1ubuntu1) eoan; urgency=medium
     - d/p/am57xx/omap5_distro_bootcmd
   * Add missing build dependency on arm/arm64
   * Correct odroid README paths
+  * Add d/p/rpi4.patch to support Raspberry Pi 4 boot
 
  -- Dave Jones <dave.jones@canonical.com>  Tue, 23 Jul 2019 10:02:04 +0000
 
