--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+u-boot (2018.07~rc3+dfsg1-0ubuntu3~18.04.2) bionic; urgency=medium
+
+  [ Shrirang Bagul ]
+  * Enable Ubuntu support for the Nitrogen6x board (LP: #1838064)
+    - Add d/p/ubuntu-nitrogen6q2g-config-tweaks.patch to tweak the
+      nitrogen6q2g configs to better fit our Ubuntu usage.
+    - Start building the nitrogen6x2g target for u-boot.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 01 Oct 2019 09:44:59 +0200
+
 u-boot (2018.07~rc3+dfsg1-0ubuntu3~18.04.1) bionic; urgency=low
 
   * Enable FIT signing support (LP: #1831942)
