--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ u-boot (2019.07+dfsg-1ubuntu1) eoan; urgency=medium
   * Add d/p/rpi4.patch to support Raspberry Pi 4 boot
   * Remove redundant d/p/rpi-import-mkknlimg.patch
   * Add script to migrate old boot configurations to split, selective style
+  * Use the board's device-tree instead of an embedded one
 
  -- Dave Jones <dave.jones@canonical.com>  Tue, 23 Jul 2019 10:02:04 +0000
 
