--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,33 @@
+u-boot (2020.10+dfsg-1ubuntu0~20.04.1) focal; urgency=medium
+
+  * SRU of 2020.10+dfsg-1 to support Raspberry Pi 4 (LP: #1903054)
+  * Re-added d/p/lzo-to-lzno.patch as lzop is in universe prior to Groovy
+  * Updated d/targets for compatibility with focal arm-trusted-firmware
+  * Updated d/control for compatibility with focal debhelper
+  * Reinstate rpi-config-migration script for focal
+
+  [ Dave Jones ]
+  * Merge from Debian unstable.  Remaining changes:
+    - Enable Ubuntu support for the Nitrogen6x board (LP: #1838064)
+      - Add d/p/ubuntu-nitrogen6q2g-config-tweaks.patch to tweak the
+        nitrogen6q2g configs to better fit our Ubuntu usage.
+      - Start building the nitrogen6x2g target for u-boot.
+    - Enable FIT signing support (LP: #1831942)
+      - Enable CONFIG_FIT_SIGNATURE so we can sign FIT images.
+      - Add libssl-dev to Build-Depends: to enable crypto functionality.
+      - Limit key names to keys within the keydir.
+    - d/p/rpi-config-tweaks.patch: Configuration adjustments to the RPi
+      configs
+    - d/p/rpi-board-dt.patch: use the board's device-tree instead of an
+      embedded one
+
+  * Removed obsolete patches/changes:
+    - d/p/lzo-to-lzno.patch: use gzip instead of lzo compression for FIT
+      images as lzop in Ubuntu is in universe. This should be temporary and in
+      the next releases ideally we should follow what Debian does.
+
+ -- Dave Jones <dave.jones@canonical.com>  Thu, 12 Nov 2020 17:05:18 +0000
+
 u-boot (2020.10+dfsg-1) unstable; urgency=medium
 
   * New upstream release.
@@ -228,6 +258,68 @@ u-boot (2019.10~rc4+dfsg-1) experimental; urgency=medium
 
  -- Vagrant Cascadian <vagrant@debian.org>  Tue, 24 Sep 2019 01:03:23 -0700
 
+u-boot (2019.07+dfsg-1ubuntu6) focal; urgency=medium
+
+  [ Ethan Hsieh ]
+  * d/p/ubuntu-nitrogen6q2g-temporary-config-fixup.patch:
+    Fix bad CRC issue. The env size and redundant environment config variables
+    have not yet been migrated to Kconfig, so setting them in _defconfig has
+    no effect. Set those manually.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 11 Feb 2020 11:43:57 +0100
+
+u-boot (2019.07+dfsg-1ubuntu5) focal; urgency=medium
+
+  [ Matthias Klose ]
+  * Use python2 for the build.
+
+  [ Dave Jones ]
+  * Added d/p/python2.patch to fix-up remaining scripts still using bare
+    "python"
+
+ -- Dave Jones <dave.jones@canonical.com>  Fri, 24 Jan 2020 11:29:15 +0000
+
+u-boot (2019.07+dfsg-1ubuntu4) focal; urgency=medium
+
+  * Do not include the vc4-fkms-v3d overlay; this breaks book on the 3A+
+    (LP: #1848247)
+  * Handle differing root partition labels during migration
+  * Ensure boot.scr is from recent flash-kernel
+
+ -- Dave Jones <dave.jones@canonical.com>  Fri, 17 Jan 2020 13:31:35 +0000
+
+u-boot (2019.07+dfsg-1ubuntu3) eoan; urgency=medium
+
+  * Avoid device-tree memory fixup on Raspberry Pi 4; this allows access to
+    the all the RAM on models with more than 1Gb (LP: #1847500)
+
+ -- Dave Jones <dave.jones@canonical.com>  Sat, 12 Oct 2019 01:02:29 +0100
+
+u-boot (2019.07+dfsg-1ubuntu2) eoan; urgency=medium
+
+  * Don't attempt config migration when /boot/firmware is a chroot
+  * Use vc4-fkms-v3d overlay on all models of Raspberry Pi
+
+ -- Dave Jones <dave.jones@canonical.com>  Wed, 09 Oct 2019 12:35:06 +0100
+
+u-boot (2019.07+dfsg-1ubuntu1) eoan; urgency=medium
+
+  * New upstream release to support Pi 4 boot (LP: #1846329)
+  * Removed patches applied upstream:
+    - d/p/dreamplug/Commit-ARM-CPU-arm926ejs-Consolidate-cache-routines-.patch
+    - d/p/mkimage/0001-fdt-Fix-mkimage-list-to-try-every-header-type.patch
+    - d/p/sunxi/teres-i.patch
+  * Updated patch:
+    - d/p/am57xx/omap5_distro_bootcmd
+  * Add missing build dependency on arm/arm64
+  * Correct odroid README paths
+  * Add d/p/rpi4.patch to support Raspberry Pi 4 boot
+  * Remove redundant d/p/rpi-import-mkknlimg.patch
+  * Add script to migrate old boot configurations to split, selective style
+  * Use the board's device-tree instead of an embedded one
+
+ -- Dave Jones <dave.jones@canonical.com>  Tue, 23 Jul 2019 10:02:04 +0000
+
 u-boot (2019.07+dfsg-1) experimental; urgency=medium
 
   * New upstream release.
@@ -333,6 +425,48 @@ u-boot (2019.07~rc1+dfsg-1) experimental; urgency=medium
   * u-boot-qemu: Add qemu-riscv64_smode target.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Fri, 03 May 2019 16:58:13 -0700
+
+u-boot (2019.04+dfsg-2ubuntu3) eoan; urgency=medium
+
+  [ Shrirang Bagul ]
+  * Enable Ubuntu support for the Nitrogen6x board (LP: #1838064)
+    - Add d/p/ubuntu-nitrogen6q2g-config-tweaks.patch to tweak the
+      nitrogen6q2g configs to better fit our Ubuntu usage.
+    - Start building the nitrogen6x2g target for u-boot.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 03 Sep 2019 11:39:53 +0200
+
+u-boot (2019.04+dfsg-2ubuntu2) eoan; urgency=low
+
+  * Enable FIT signing support (LP: #1831942)
+    - Enable CONFIG_FIT_SIGNATURE so we can sign FIT images.
+    - Add libssl-dev to Build-Depends: to enable crypto functionality.
+    - Limit key names to keys within the keydir.
+
+ -- Andy Whitcroft <apw@ubuntu.com>  Mon, 10 Jun 2019 15:44:35 +0100
+
+u-boot (2019.04+dfsg-2ubuntu1) eoan; urgency=medium
+
+  * Merge with 2019.04+dfsg-2 from Debian experimental. Remaining changes:
+    - d/p/rpi-import-mkknlimg.patch import tools/mkknlimg from Xenial/raspi2 -
+      scripts/mkknlimg @ 83a3ebb
+    - d/p/rpi2-rpi3-config-tweaks.patch: basing on the earlier
+      rpi2-config-tweaks.patch, make configuration adjustments to the rpi2 and
+      rpi3 configs.
+    - d/u-boot-rpi.postinst: support the fact that we now ship multiple uboot
+      binaries for multiple Pi platforms in one package. Try to determine
+      which device we're running on and use the right binary during
+      upgrade/installation. * debian/patches:
+    - d/p/lzo-to-lzno.patch: use gzip instead of lzo compression for FIT
+      images as lzop in Ubuntu is in universe. This should be temporary and in
+      the next releases ideally we should follow what Debian does.
+    - debian/control: Add missing dependency on binutils (for strings)
+      (LP: #1814930)
+    - debian/patches: Refreshed patches.
+  * Obsoleted; applied upstream:
+    - Removed d/p/odroid-xu3/bootdelay
+
+ -- Dave Jones <dave.jones@canonical.com>  Mon, 03 Jun 2019 14:41:23 +0000
 
 u-boot (2019.04+dfsg-2) experimental; urgency=medium
 
@@ -534,6 +668,29 @@ u-boot (2018.07+dfsg-1) experimental; urgency=medium
 
  -- Vagrant Cascadian <vagrant@debian.org>  Mon, 09 Jul 2018 13:34:06 -0700
 
+u-boot (2018.07~rc3+dfsg1-0ubuntu2) disco; urgency=medium
+
+  * d/control: Add missing dependency on binutils (for strings) (LP: #1814930)
+
+ -- Dave Jones <dave.jones@canonical.com>  Wed, 06 Feb 2019 16:40:22 +0000
+
+u-boot (2018.07~rc3+dfsg1-0ubuntu1) disco; urgency=medium
+
+  * New interim upstream release.
+    - We pull in an rc version because that's the u-boot version we use in
+      our current core18 images and we want to provide 'feature parity'.
+  * debian/control:
+    - Added missing build-deps bison and flex.
+  * debian/patches:
+    - Refresh am57xx/omap5_distro_bootcmd.
+    - Refreshed patches.
+    - Removed odroid-xu3/bootdelay which was applied upstream.
+    - Add lzo-to-lzno.patch to use gzip instead of lzo compression for FIT
+      images as lzop in Ubuntu is in universe. This should be temporary and
+      in the next releases ideally we should follow what Debian does.
+
+ -- Dave Jones <dave.jones@canonical.com>  Fri, 11 Jan 2019 16:43:27 +0000
+
 u-boot (2018.07~rc2+dfsg-1) experimental; urgency=medium
 
   * New upstream release candidate:
@@ -594,6 +751,26 @@ u-boot (2018.05~rc2+dfsg-1) experimental; urgency=medium
   * Install build configs to /usr/share/doc/*/configs.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Tue, 17 Apr 2018 16:05:55 -0700
+
+u-boot (2018.03+dfsg1-2ubuntu2) disco; urgency=medium
+
+  * debian/u-boot-rpi.postinst:
+    - Support the fact that we now ship multiple uboot binaries for multiple
+      Pi platforms in one package. Try to determine which device we're running
+      on and use the right binary during upgrade/installation.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Thu, 29 Nov 2018 01:16:07 +0100
+
+u-boot (2018.03+dfsg1-2ubuntu1) cosmic; urgency=low
+
+  * Merge from Debian unstable.  Remaining changes:
+    - rpi-import-mkknlimg.patch import tools/mkknlimg from Xenial/raspi2 -
+      scripts/mkknlimg @ 83a3ebb
+  * debian/patches/rpi2-rpi3-config-tweaks.patch: basing on the earlier
+    rpi2-config-tweaks.patch, make configuration adjustments to the rpi2 and
+    rpi3 configs.
+
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Fri, 27 Apr 2018 12:38:24 +0100
 
 u-boot (2018.03+dfsg1-2) unstable; urgency=medium
 
@@ -1071,6 +1248,26 @@ u-boot (2016.05~rc3+dfsg1-1) experimental; urgency=medium
 
  -- Vagrant Cascadian <vagrant@debian.org>  Sat, 30 Apr 2016 18:53:04 -0700
 
+u-boot (2016.03+dfsg1-6ubuntu2) zesty; urgency=medium
+
+  * From upstream u-boot: (LP: #1636838)
+    - debian/patches/rpi-import-mkknlimg.patch: import tools/mkknlimg from
+      Xenial/raspi2 - scripts/mkknlimg @ 83a3ebb
+    - debian/u-boot-rpi.postinst: pass u-boot.bin through mkknlimg before
+      installing it as /boot/firmware/uboot.bin
+    - debian/patches/serial-pl01x-Add-support-for-devices-with-the-rate-p.patch:
+      Skip serial clock initialization when it's done by the firmware.
+
+ -- Paolo Pisati <paolo.pisati@canonical.com>  Wed, 09 Nov 2016 17:09:29 +0200
+
+u-boot (2016.03+dfsg1-6ubuntu1) yakkety; urgency=low
+
+  * Merge from Debian unstable.  Remaining changes:
+    - debian/patches/rpi2-config-tweaks.patch: configuration adjustments
+      to the RPi2 config.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 06 Jul 2016 17:30:44 -0700
+
 u-boot (2016.03+dfsg1-6) unstable; urgency=medium
 
   [ Vagrant Cascadian ]
@@ -1091,6 +1288,14 @@ u-boot (2016.03+dfsg1-6) unstable; urgency=medium
     tracking down the patch!
 
  -- Vagrant Cascadian <vagrant@debian.org>  Tue, 28 Jun 2016 09:38:27 +0200
+
+u-boot (2016.03+dfsg1-5ubuntu1) yakkety; urgency=low
+
+  * Merge from Debian unstable.  Remaining changes:
+    - debian/patches/rpi2-config-tweaks.patch: configuration adjustments
+      to the RPi2 config.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Fri, 10 Jun 2016 21:46:33 -0700
 
 u-boot (2016.03+dfsg1-5) unstable; urgency=medium
 
@@ -1116,6 +1321,14 @@ u-boot (2016.03+dfsg1-5) unstable; urgency=medium
   * u-boot-tegra: Update README.Debian for Jetson TX1.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Sun, 29 May 2016 14:29:59 -0700
+
+u-boot (2016.03+dfsg1-4ubuntu1) yakkety; urgency=low
+
+  * Merge from Debian unstable.  Remaining changes:
+    - debian/patches/rpi2-config-tweaks.patch: configuration adjustments
+      to the RPi2 config.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 26 Apr 2016 21:06:04 -0700
 
 u-boot (2016.03+dfsg1-4) unstable; urgency=medium
 
@@ -1175,6 +1388,14 @@ u-boot (2016.03~rc2+dfsg1-1) experimental; urgency=medium
 
  -- Vagrant Cascadian <vagrant@debian.org>  Tue, 16 Feb 2016 15:01:48 -0800
 
+u-boot (2016.01+dfsg1-2ubuntu1) xenial; urgency=low
+
+  * Merge from Debian unstable.  Remaining changes:
+    - debian/patches/rpi2-config-tweaks.patch: configuration adjustments
+      to the RPi2 config.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Thu, 11 Feb 2016 21:55:38 -0800
+
 u-boot (2016.01+dfsg1-2) unstable; urgency=medium
 
   * u-boot-omap:
@@ -1187,6 +1408,13 @@ u-boot (2016.01+dfsg1-2) unstable; urgency=medium
     works" from upstream.
 
  -- Vagrant Cascadian <vagrant@debian.org>  Mon, 08 Feb 2016 20:14:04 -0800
+
+u-boot (2016.01+dfsg1-1ubuntu1) xenial; urgency=medium
+
+  * debian/patches/rpi2-config-tweaks.patch: configuration adjustments
+    to the RPi2 config.
+
+ -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 02 Feb 2016 11:43:50 -0800
 
 u-boot (2016.01+dfsg1-1) unstable; urgency=medium
 
@@ -2250,3 +2478,4 @@ u-boot (2010.03-1) unstable; urgency=low
   * Initial packaging.  closes: #583605.
 
  -- Clint Adams <schizo@debian.org>  Fri, 28 May 2010 16:20:39 -0400
+
