--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2020.10+dfsg-1ubuntu2) hirsute; urgency=medium
+
+  * No-change rebuild to build with python3.9 as default.
+
+ -- Matthias Klose <doko@ubuntu.com>  Thu, 19 Nov 2020 18:38:58 +0100
+
 u-boot (2020.10+dfsg-1ubuntu1) hirsute; urgency=low
 
   * Merge from Debian unstable.  Remaining changes:
