--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2020.10+dfsg-1ubuntu3) hirsute; urgency=medium
+
+  * Enable u-boot spl for unleashed. LP: #1905274
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 23 Nov 2020 12:51:03 +0000
+
 u-boot (2020.10+dfsg-1ubuntu2) hirsute; urgency=medium
 
   * No-change rebuild to build with python3.9 as default.
