--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2020.10+dfsg-1ubuntu4) hirsute; urgency=medium
+
+  * Use the right opensbi fw_dynamic for fu540.
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Tue, 08 Dec 2020 09:04:00 +0000
+
 u-boot (2020.10+dfsg-1ubuntu3) hirsute; urgency=medium
 
   * Enable u-boot spl for unleashed. LP: #1905274
