--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2021.01~rc4+dfsg-2) experimental; urgency=medium
+
+  * debian/targets: Use correct name for "pinephone" target. Fixes FTBFS.
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Tue, 05 Jan 2021 17:51:36 -0800
+
 u-boot (2021.01~rc4+dfsg-1) experimental; urgency=medium
 
   [ Nicolas Boulenguez ]
