--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+u-boot (2020.10+dfsg-1ubuntu0~18.04.2) bionic; urgency=medium
+
+  * SRU of changes through to 2020.10+dfsg-1ubuntu6 to fix Pi4-8GB & CM4 support:
+
+  * Add d/p/rpi-8gb-pci.patch for Pi400 and Pi4-8Gb support (LP: #1906552)
+  * Add d/p/rpi-cm4-sdhci.patch for CM4 eMMC support
+  * Add d/p/rpi-maxargs.patch for new Core 18 boot-env (LP: #1910094)
+  * Remove redundant d/targets entries
+
+ -- Dave Jones <dave.jones@canonical.com>  Fri, 08 Jan 2021 15:51:00 +0000
+
 u-boot (2020.10+dfsg-1ubuntu0~18.04.1) bionic; urgency=low
 
   * SRU of 2020.10+dfsg-1 to support Raspberry Pi 4 (LP: #1903054), and
