--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2021.01+dfsg-3ubuntu4) hirsute; urgency=medium
+
+  * Update patch for unmatched.
+
+ -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 15 Mar 2021 21:26:35 +0000
+
 u-boot (2021.01+dfsg-3ubuntu3) hirsute; urgency=medium
 
   * Update patches for unmatched.
